# little-acorn

./: .gitignore  CMakeLists.txt
CMake/: CompilePCH.cmake  FindCapnp.cmake  FindIconv.cmake  FindSubmodule.cmake  SetIfUndefined.cmake  Submodule.cmake  SubmoduleOptions.cmake  clean.py  distribute.py
Onigmo/src/: setup.c
Shared/include/oak/: debug
cf/: CMakeLists.txt
text/: CMakeLists.txt
